package org.pispeb.treff_server.sql;

/**
 * TODO: stub
 */
public class SQLDatabase {
}
